# Cassini_LookAround

./: .gitignore  README.md
algorithms_cpp/: CMakeLists.txt  fuzzy_main.cpp
algorithms_cpp/include/: fuzzyfication.hpp
algorithms_cpp/src/: fuzzyfication.cpp
algorithms_python/: findtemplate.py  fuzzification.py
docs/: presentation.md
